graylog/opensearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch
  namespace: testgray1010mn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      containers:
      - name: opensearch
        image: opensearchproject/opensearch:2.11.0
        ports:
        - containerPort: 9200
        - containerPort: 9300
