graylog/opensearch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opensearch-service
  namespace: testgray1010mn
spec:
  selector:
    app: opensearch
  ports:
  - name: http
    port: 9200
    targetPort: 9200
  - name: transport
    port: 9300
    targetPort: 9300
